--- a/frontend-dApp/Suitter7-dApp/package.json
+++ b/frontend-dApp/Suitter7-dApp/package.json
@@ -13,6 +13,7 @@
     "@grpc/grpc-js": "^1.10.9",
     "@grpc/proto-loader": "^0.7.13",
     "@mysten/dapp-kit": "0.19.9",
+    "@mysten/seal": "^0.9.4",
     "@mysten/sui": "1.45.0",
     "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-checkbox": "^1.3.3",
